correct spacing

--- a/2-styles.css
+++ b/2-styles.css
@@ -299,10 +299,9 @@ button {
 .resulticons {
   text-align: center;
   display: flex;
-  margin-bottom: 110px;
+  margin: 56px 0 79px 0;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
   width: 100%;
 }
 
@@ -310,10 +309,9 @@ button {
   background-image: url(images/pentagone.png);
   background-repeat: no-repeat;
   background-position: center;
-  z-index: 0;
   width: 190px;
   height: 190px;
-  background-size: cover;
+  background-size: contain;
   justify-content: space-around;
   text-align: center;
   margin: auto;
@@ -325,6 +323,9 @@ button {
   justify-content: space-around;
   align-items: center;
   display: flex;
+  width: 190px;
+  height: 190px;
+  padding: 1rem;
 }
 
 .result h1, p {
